volexc/tests/ui/parse_missing_semicolon_enum.vol
// Missing semicolon in enum variant
enum Status {
    Active = 0
    Inactive = 1;
}
